# openrsp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
compat/: adsb_filter.c  adsb_filter.h  daemon_backend.c  daemon_backend.h  debug_log.c  debug_log.h  gain_values.c  gain_values.h  iq_correction.c  iq_correction.h  low_if_dsp.c  low_if_dsp.h  sdrplay_api.h  sdrplay_api_callback.h  sdrplay_api_compat.c  sdrplay_api_compat.h  sdrplay_api_control.h  sdrplay_api_dev.h  sdrplay_api_rsp1a.h  sdrplay_api_rsp2.h  sdrplay_api_rspDuo.h  sdrplay_api_rspDx.h  sdrplay_api_rx_channel.h  sdrplay_api_tuner.h  sync_update.c  sync_update.h
contrib/: SoapySDRPlay3-LICENSE  soapysdrplay3-rspduo-dual-controls.patch
daemon/: config_validation.c  config_validation.h  duo_session.c  duo_session.h  openrspd.c  removal_tracker.c  removal_tracker.h  windows_device_recovery.c  windows_device_recovery.h
docs/: architecture.md  rspduo-evidence.md
include/openrsp/: client.h  identity.h  openrsp.h  protocol.h  socket_compat.h
packaging/: sdrplay_api.pc.in
packaging/firmware/: README
packaging/linux/: openrspd.service.in
packaging/macos/: com.openrsp.openrspd.plist
packaging/windows/: install-openrsp.ps1
scripts/: install-macos.sh  uninstall-macos.sh
src/: client_posix.c  device_db.c  devices.c  discovery.c  hard.c  identity.c  libmirisdr.c  miri_sdr.c  session.c  soft.c  structs.h
tests/: adsb_filter_test.c  client_test.c  client_timeout_test.c  daemon_backend_recovery_test.c  daemon_config_validation_test.c  debug_log_test.c  device_db_test.c  device_identity_test.c  duo_session_test.c  gain_values_test.c  iq_correction_test.c  low_if_dsp_test.c  openrspd_multi_client_test.c  removal_tracker_test.c  rspduo_analytic_test.c  rspduo_async_state_test.c  rspduo_pll_test.c  sdrplay_api_compat_test.c  sdrplay_api_cross_process_lock_test.c  sdrplay_header_compat_test.c  sdrplay_header_cpp_test.cpp  sync_update_test.c  windows_client_ping.ps1  windows_daemon_backend_recovery_test.c  windows_daemon_backend_recovery_test.ps1  windows_daemon_lock_test.c  windows_daemon_lock_test.ps1  windows_device_recovery_test.c  windows_installer_contract.ps1  windows_sdrplay_api_lifecycle.ps1  windows_sdrplay_api_lifecycle_test.c  windows_sdrplay_api_smoke.ps1  windows_sdrplay_api_smoke_test.c
tools/: libusb_trace_interpose.c  lldb_rspduo_bulk_stats.py  openrsp_extract_firmware.c  openrsp_lifecycle.c  openrsp_miri_probe.c  openrsp_probe.c  openrsp_reset.c  run_rspduo_api_gate.sh  sdrplay_abi_layout.c  sdrplay_compat_stream_test.c  sdrplay_gain_sweep_test.c  sdrplay_lifecycle_probe.c  sdrplay_rate_probe.c  sdrplay_rspduo_control_probe.c  sdrplay_rspduo_gain_probe.c  sdrplay_rspduo_mode_probe.c  soapy_control_probe.cpp
